--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OSIRIS APPAREL - Seu Estilo Começa Aqui</title>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&family=Urbanist:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="estilosite.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
     <header>
         <div class="site-branding">
-            <img src="https://i.imgur.com/your-logo.png" alt="Logo OSIRIS APPAREL" class="site-logo">
+            <img src="https://via.placeholder.com/40x40.png?text=LOGO" alt="Logo OSIRIS APPAREL" class="site-logo">
             <h1 id="siteTitle">OSIRIS APPAREL</h1>
         </div>
         <nav class="nav-buttons">
