--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="site-branding">
-            <img src="https://via.placeholder.com/40x40.png?text=LOGO" alt="Logo OSIRIS APPAREL" class="site-logo">
+            <img src="image_3225cd.png" alt="Logo OSIRIS APPAREL" class="site-logo">
             <h1 id="siteTitle">OSIRIS APPAREL</h1>
         </div>
         <nav class="nav-buttons">
