--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
 <body>
     <header>
         <div class="site-branding">
-            <img src="Imagenssite/image 1.png" alt="Logo OSIRIS APPAREL" class="site-logo">
+            <img src="image_3225cd.png" alt="Logo OSIRIS APPAREL" class="site-logo">
             <h1 id="siteTitle">OSIRIS APPAREL</h1>
         </div>
-        <nav class="nav-buttons">
+        <button class="hamburger-menu" id="hamburgerMenu">
+            <i class="bi bi-list"></i>
+        </button>
+        <nav class="nav-buttons" id="mainNav">
             <button id="navHome" class="btn">Início</button>
             <button id="navAllProducts" class="btn">Coleção Completa</button>
             <button id="navAdmin" class="btn">Área do Vendedor</button>
