--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="site-branding">
-            <img src="image_3225cd.png" alt="Logo OSIRIS APPAREL" class="site-logo">
+            <img src="Imagenssite/image 1.png" alt="Logo OSIRIS APPAREL" class="site-logo">
             <h1 id="siteTitle">OSIRIS APPAREL</h1>
         </div>
         <button class="hamburger-menu" id="hamburgerMenu">
