--- a/index.html
+++ b/index.html
@@ -24,38 +24,40 @@
         </div>
     </header>
 
-    <main id="homeSection" class="page-section active">
-        <section class="hero-section">
-            <div class="hero-content">
-                <h1>Seu Olhar, Sua Atitude.</h1>
-                <p>Descubra a coleção que redefine o estilo e a proteção para seus olhos.</p>
-                <button class="btn btn-primary" id="exploreProductsBtn">Explorar Produtos</button>
+    <main>
+        <section id="homeSection" class="page-section active">
+            <div class="hero-section">
+                <div class="hero-content">
+                    <h1>Seu Olhar, Sua Atitude.</h1>
+                    <p>Descubra a coleção que redefine o estilo e a proteção para seus olhos.</p>
+                    <button class="btn btn-primary" id="exploreProductsBtn">Explorar Produtos</button>
+                </div>
+            </div>
+
+            <div class="products-showcase">
+                <h2>Nossos Destaques</h2>
+                <div class="product-grid" id="featuredProductsGrid">
+                    <p id="loadingFeaturedMessage" class="loading-message">Carregando óculos em destaque...</p>
+                    </div>
+                <button class="btn btn-secondary" id="viewAllProductsBtn">Ver Coleção Completa</button>
             </div>
         </section>
 
-        <section class="products-showcase">
-            <h2>Nossos Destaques</h2>
-            <div class="product-grid" id="featuredProductsGrid">
-                <p id="loadingFeaturedMessage" class="loading-message">Carregando óculos em destaque...</p>
-            </div>
-            <button class="btn btn-secondary" id="viewAllProductsBtn">Ver Coleção Completa</button>
-        </section>
-    </main>
-
-    <main id="allProductsSection" class="page-section">
-        <section class="full-collection">
-            <h2>Nossa Coleção Completa</h2>
-            <div class="product-grid" id="allProductsGrid">
-                <p id="loadingAllProductsMessage" class="loading-message">Carregando todos os óculos...</p>
+        <section id="allProductsSection" class="page-section">
+            <div class="full-collection">
+                <h2>Nossa Coleção Completa</h2>
+                <div class="product-grid" id="allProductsGrid">
+                    <p id="loadingAllProductsMessage" class="loading-message">Carregando todos os óculos...</p>
+                    </div>
             </div>
         </section>
-    </main>
 
-    <main id="productDetailSection" class="page-section">
-        <p id="loadingDetailMessage" class="loading-message">Carregando detalhes do óculos...</p>
-    </main>
+        <section id="productDetailSection" class="page-section">
+            <p id="loadingDetailMessage" class="loading-message">Carregando detalhes do óculos...</p>
+            </section>
 
-    <main id="aboutUsSection" class="page-section">
+        <section id="aboutUsSection" class="page-section">
+            </section>
     </main>
 
     <footer>
