--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <header>
         <div class="header-content">
-            <a href="#" class="logo" id="navHome">Osiris Apparel</a>
+            <a href="#" class="logo" id="navHome">
+                <img src="Imagenssite/ss.png" alt="Logo da Osiris Apparel"> Osiris Apparel
+            </a>
             <button class="hamburger-menu" id="hamburgerMenu">
                 <i class="bi bi-list"></i>
             </button>
