--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="header-content">
             <a href="#" class="logo" id="navHome">
-                <img src="Imagenssite/ss.png" alt="Logo da Osiris Apparel"> Osiris Apparel
+                <img src="Imagenssite/image 1.png" alt="Logo da Osiris Apparel"> Osiris Apparel
             </a>
             <button class="hamburger-menu" id="hamburgerMenu">
                 <i class="bi bi-list"></i>
