--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Osiris Apparel - Óculos de Sol Modernos</title>
-    <link rel="stylesheet" href="estilosite.css">
+    <title>Osiris Apparel</title>
+    <link rel="icon" href="Imagenssite/image 1.png" type="image/png"> <link rel="stylesheet" href="estilosite.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
     <header>
-        <div class="header-content">
+        <div class="header-content container">
             <a href="#" class="logo" id="navHome">
-                <img src="Imagenssite/image 1.png" alt="Logo da Osiris Apparel"> Osiris Apparel
+                <img src="assets/images/logo_icon.png" alt="Logo Osiris Apparel"> Osiris Apparel
             </a>
-            <button class="hamburger-menu" id="hamburgerMenu">
-                <i class="bi bi-list"></i>
-            </button>
             <nav class="main-nav" id="mainNav">
                 <ul>
                     <li><a href="#" id="navAllProducts">Coleção</a></li>
                     <li><a href="#" id="navAboutUs">Sobre Nós</a></li>
                 </ul>
             </nav>
+            <button class="hamburger-menu" id="hamburgerMenu" aria-label="Abrir Menu">
+                <i class="bi bi-list"></i>
+            </button>
         </div>
     </header>
 
@@ -29,32 +29,31 @@
         <section id="homeSection" class="page-section active">
             <div class="hero-section">
                 <div class="hero-content">
-                    <h1>Seu Olhar, Sua Atitude.</h1>
-                    <p>Descubra a coleção que redefine o estilo e a proteção para seus olhos.</p>
-                    <button class="btn btn-primary" id="exploreProductsBtn">Explorar Produtos</button>
+                    <h1>Descubra o Óculos Perfeito para Você</h1>
+                    <p>Estilo, proteção e qualidade em cada detalhe. Encontre seu próximo acessório favorito na Osiris Apparel.</p>
+                    <a href="#" class="btn btn-primary" id="exploreProductsBtn">Explore Nossos Óculos</a>
                 </div>
             </div>
-
-            <div class="products-showcase">
-                <h2>Nossos Destaques</h2>
+            <div class="products-showcase container">
+                <h2>Modelos em Destaque</h2>
+                <div id="loadingFeaturedMessage" class="loading-message">Carregando óculos em destaque...</div>
                 <div class="product-grid" id="featuredProductsGrid">
-                    <p id="loadingFeaturedMessage" class="loading-message">Carregando óculos em destaque...</p>
                     </div>
-                <button class="btn btn-secondary" id="viewAllProductsBtn">Ver Coleção Completa</button>
+                <a href="#" class="btn btn-secondary" id="viewAllProductsBtn">Ver Toda a Coleção</a>
             </div>
         </section>
 
         <section id="allProductsSection" class="page-section">
-            <div class="full-collection">
+            <div class="full-collection container">
                 <h2>Nossa Coleção Completa</h2>
+                <div id="loadingAllProductsMessage" class="loading-message">Carregando todos os óculos...</div>
                 <div class="product-grid" id="allProductsGrid">
-                    <p id="loadingAllProductsMessage" class="loading-message">Carregando todos os óculos...</p>
                     </div>
             </div>
         </section>
 
         <section id="productDetailSection" class="page-section">
-            <p id="loadingDetailMessage" class="loading-message">Carregando detalhes do óculos...</p>
+            <div id="loadingDetailMessage" class="loading-message">Carregando detalhes do óculos...</div>
             </section>
 
         <section id="aboutUsSection" class="page-section">
@@ -62,7 +61,9 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Osiris Apparel. Todos os direitos reservados.</p>
+        <div class="container">
+            <p>&copy; 2024 Osiris Apparel. Todos os direitos reservados.</p>
+        </div>
     </footer>
 
     <script src="script.js"></script>
