--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="header-content container">
             <a href="#" class="logo" id="navHome">
-                <img src="assets/images/logo_icon.png" alt="Logo Osiris Apparel"> Osiris Apparel
+                <img src="Imagenssite/image 1.png" alt="Logo Osiris Apparel"> Osiris Apparel
             </a>
             <nav class="main-nav" id="mainNav">
                 <ul>
