--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Osiris Apparel</title>
-    <link rel="icon" href="Imagenssite/image 1.png" type="image/png"> <link rel="stylesheet" href="estilosite.css">
+    <link rel="icon" href="Imagenssite/image-1.png" type="image/png"> 
+    <link rel="stylesheet" href="estilosite.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
     <header>
         <div class="header-content container">
             <a href="#" class="logo" id="navHome">
-                <img src="Imagenssite/image 1.png" alt="Logo Osiris Apparel"> Osiris Apparel
+                <img src="Imagenssite/image-1.png" alt="Logo Osiris Apparel"> Osiris Apparel
             </a>
             <nav class="main-nav" id="mainNav">
                 <ul>
