--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <header>
         <div class="container">
-            <h1 class="logo">Osiris Apparel</h1>
+            <a href="#" id="navHome" class="logo">
+                <img src="logo.png" alt="Osiris Apparel Logo" class="logo-img">
+            </a>
             <nav id="mainNav">
                 <a href="#" id="navAllProducts" class="nav-item">Coleção</a>
                 <a href="#" id="navAboutUs" class="nav-item">Sobre Nós</a>
