--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="container">
             <a href="#" id="navHome" class="logo">
-                <img src="#" alt="Osiris Apparel" class="logo-img">
+                <img src="Imagenssite/image 1.png" alt="Osiris Apparel" class="logo-img">
             </a>
             <nav id="mainNav">
                 <a href="#" id="navAllProducts" class="nav-item">Coleção</a>
