--- a/index.html
+++ b/index.html
@@ -11,16 +11,13 @@
     <header>
         <div class="container">
             <a href="#" id="navHome" class="logo">
-                <img src="Imagenssite/image 1.png" alt="Logo Osiris Apparel" class="logo-img">
-                <span class="logo-text">Osiris Apparel</span> </a>
+                <span class="logo-text">Osiris Apparel</span> 
+            </a>
             <nav id="mainNav">
                 <a href="#" id="navAllProducts" class="nav-item">Coleção</a>
                 <a href="#" id="navAboutUs" class="nav-item">Sobre Nós</a>
             </nav>
-            <button id="hamburgerMenu" class="hamburger-menu">
-                <i class="bi bi-list"></i>
-            </button>
-        </div>
+            </div>
     </header>
 
     <main>
